# silaeder-vpn

./: LICENSE  README.md  Silaeder Vpn.bsdesign
front-end/: index.html  package.json
front-end/src/: App.jsx
front-end/src/assets/css/: Contact-Form-Clean.css
old-front-end/: index.html  package-lock.json  package.json
old-front-end/src/: App.tsx
rocket-web-app/: .gitignore  Cargo.toml  Rocket.toml
rocket-web-app/cache_files/: Dmitri Proskuriakov_1.conf  Dmitri Proskuriakov_2.conf
rocket-web-app/migrations/2022-03-18-203822_create_users/: up.sql
rocket-web-app/migrations/2022-04-14-095449_init_database/: down.sql  up.sql
rocket-web-app/src/: main.rs  peer.rs  server.rs  servermanager.rs  session.rs  user.rs  utils.rs  webinterface.rs  wireguardapi.rs
rocket-web-app/static/: admin.html.tera  contact.html.tera  dashboard.html.tera  login.html.tera  servers.html.tera  settings.html.tera  signup.html.tera
static-html/: admin.html  contact.html  dashboard.html  login.html  manifest.json  servers.html  settings.html  signup.html
vpn-api/: .gitignore  Cargo.toml  Rocket-Example.toml  VPN-Example.toml
vpn-api/src/: main.rs  monitoring.rs  servermanager.rs  webinterface.rs  wireguardapi.rs
vpnmanager/: .gitignore  Cargo.toml  Rocket.toml  test.ipynb
vpnmanager/src/: main.rs  servermanager.rs  webinterface.rs  wireguardapi.rs
