[package]
name = "rocket-web-app"
authors = ["Dmitri \"JustDprroz\" Proskuriakov"]
version = "0.1.0"
edition = "2021"

[dependencies]
pbkdf2 = "0.10"
rand_core = { version = "0.6", features = ["std"] }
openssl-sys = "0.9"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
parking_lot = "0.12"
rand = "0.8"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["tls", "json", "secrets"]

[dependencies.diesel]
version = "1.3"
features = ["sqlite", "r2d2"]

[dependencies.diesel_migrations]
version = "1.3"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_sqlite_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]
